2009-01-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/38902
	Backport from mainline:
	2008-12-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (expand_movmem_via_rep_mov): Set MEM_SIZE
	correctly.
	(expand_setmem_via_rep_stos): Add ORIG_VALUE argument.  If
	ORIG_VALUE is const0_rtx and COUNT is constant, set MEM_SIZE
	on DESTMEM.
	(ix86_expand_setmem): Adjust callers.

2008-01-24  Richard Guenther  <rguenther@suse.de>

	* BASE-VER: Set to 4.3.4.
	* DEV-PHASE: Set to prerelease.

2009-01-24  Release Manager

	* GCC 4.3.3 released.

2009-01-20  Joseph Myers  <joseph@codesourcery.com>

	PR other/38758
	* longlong.h: Update copyright years.  Use soft-fp license
	notice.

2009-01-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-07-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36765
	* tree-ssa-alias.c (compute_flow_insensitive_aliasing): Add
	aliases from HEAP vars to SMTs.

2009-01-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa64-hpux.h (LIB_SPEC): Link against librt when building static
	openmp applications.
	* pa-hpux11.h (LIB_SPEC): Likewise.

	* pa.c (pa_asm_output_mi_thunk): Use pc-relative branch to thunk
	function when not using named sections on targets with named sections
	if branch distance is less than 262132.

	* pa.c (last_address): Change to unsigned.
	(update_total_code_bytes): Change argument to unsigned.  Don't
	check if insn addresses are set.
	(pa_output_function_epilogue): Set last_address to UINT_MAX if insn
	addresses are not set.
	(pa_asm_output_mi_thunk): Handle wrap when updating last_address.

2009-01-16  Uros Bizjak  <ubizjak@gmail.com>

	* sched-deps.c (sched_analyze_2)[UNSPEC_VOLATILE]: Flush pending
	memory loads and stores.
	
2009-01-11  Matthias Klose  <doko@ubuntu.com>

	PR middle-end/38616, backport from mainline:
	2008-05-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*strmovsi_1): Simplify asm alternatives.
	(*strmovsi_rex_1): Ditto.